fix for ams-screen background-color in dark mode

--- a/src/css/ams-overrides.css
+++ b/src/css/ams-overrides.css
@@ -27,6 +27,10 @@
   padding: 0 !important
 }
 
+[data-theme='dark'] .ams-screen {
+  background-color: transparent;
+}
+
 [data-theme='dark'] .ams-spotlight--dark-blue {
   background-color: var(--ifm-navbar-background-color);
 }
